<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/detailViewFragment"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home"/>

    <item
        android:id="@+id/gridFragment"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:title="@string/search"/>

    <item
        android:id="@+id/addPhotoActivity"
        android:icon="@drawable/ic_add_a_photo"
        android:enabled="true"
        android:title="@string/upload_image"/>

    <item
        android:id="@+id/alarmFragment"
        android:icon="@drawable/ic_favorite"
        android:enabled="true"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_account"
        android:enabled="true"
        android:title="@string/account"/>
</menu>